--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "test": "mocha --reporter nyan tests/**/*.test.js",
+    "test:watch": "mocha --reporter min --watch tests/**/*.test.js",
     "dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src --out-dir dist"
   },
@@ -19,7 +20,9 @@
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.3.1",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4"
