--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": ["@babel/preset-env"],
+    "presets": [
+        "minify",
+        [ "@babel/preset-env", {
+            "targets": {    
+                "node": "current"
+            }
+        }]
+    ],
     "plugins": [
         [
             "@babel/plugin-proposal-pipeline-operator",
