--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "SavagePixie",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-env": "^7.10.4",
     "express": "^4.17.1",
     "fluture": "^12.3.1"
   },
@@ -21,8 +22,8 @@
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.1",
-    "@babel/preset-env": "^7.10.3",
     "babel-eslint": "^10.1.0",
+    "babel-preset-minify": "^0.5.1",
     "eslint": "^7.3.1",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4"
