--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.10.4",
     "express": "^4.17.1",
-    "fluture": "^12.3.1"
+    "fluture": "^12.3.1",
+    "ramda": "^0.27.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
