--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "silmarillion-api",
+  "name": "character-api",
   "version": "1.0.0",
-  "description": "A REST API to serve information about characters in the Silmarillion.",
+  "description": "A REST API to serve information about your favourite characters.",
   "main": "index.js",
   "scripts": {
     "start": ". ./.env node dist/server.js",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/preset-env": "^7.10.4",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fluture": "^12.3.1",
     "ramda": "^0.27.0"
