updated seed script and added it to package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "NODE_PATH=src mocha --reporter min --require @babel/register --watch tests/unit/**/*.test.js",
     "e2e": "NODE_PATH=src DB=test-data LIMIT=5 mocha --reporter nyan --require @babel/register tests/e2e/**/*.e2e.js",
     "dev": ". ./.env && nodemon --exec babel-node src/server.js",
-    "build": "babel src --out-dir dist"
+    "build": "babel src --out-dir dist",
+    "seed": "cd scripts && node seedDb.js"
   },
   "author": "Artur J Zapater",
   "homepage": "https://github.com/arturjzapater/character-api#readme",
